@@ -7,11 +7,10 @@ import com.thegogetters.accounting.mapper.MapperUtil;
 import com.thegogetters.accounting.repository.CategoryRepository;
 import com.thegogetters.accounting.service.CategoryService;
 import com.thegogetters.accounting.service.CompanyService;
-import com.thegogetters.accounting.service.UserService;
+import com.thegogetters.accounting.service.ProductService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -19,23 +18,27 @@ public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final MapperUtil mapperUtil;
     private final CompanyService companyService;
+    private final ProductService productService;
 
-    private final UserService userService;
-
-    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, CompanyService companyService, UserService userService) {
+    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, CompanyService companyService, ProductService productService) {
         this.categoryRepository = categoryRepository;
         this.mapperUtil = mapperUtil;
         this.companyService = companyService;
-        this.userService = userService;
+        this.productService = productService;
     }
 
     @Override
     public List<CategoryDto> listCategories() {
         CompanyDto companyDto = companyService.getCompanyOfLoggedInUser();
-        return categoryRepository.listCategoriesByAscOrder().stream()
+
+        List<CategoryDto> categoryList = categoryRepository.listCategoriesByAscOrder().stream()
                 .filter(category -> category.getCompany().getId().equals(companyDto.getId()))
-                .map(category -> mapperUtil.convert(category, new CategoryDto()))
-                .collect(Collectors.toList());
+                .map(category -> mapperUtil.convert(category, new CategoryDto())).toList();
+
+        for (CategoryDto category : categoryList) {
+            if(productService.checkAnyProductExist(category.getId())) category.setHasProduct(true);
+        }
+        return categoryList;
     }
 
     @Override
@@ -55,7 +58,8 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public CategoryDto findByDescription(String description) {
-        return mapperUtil.convert(categoryRepository.findByDescription(description), new CategoryDto());
+        CompanyDto companyDto = companyService.getCompanyOfLoggedInUser();
+        return mapperUtil.convert(categoryRepository.findByDescriptionAndCompanyId(description, companyDto.getId()), new CategoryDto());
     }
 
     @Override
@@ -67,8 +71,16 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public void createCategory(CategoryDto categoryDto) {
+        CompanyDto companyDto = companyService.getCompanyOfLoggedInUser();
+        categoryDto.setCompany(companyDto);
         Category category = mapperUtil.convert(categoryDto, new Category());
-        categoryRepository.save(category);
+        if(!ifCategoryExist(category.getDescription())) categoryRepository.save(category);
     }
 
+    @Override
+    public boolean ifCategoryExist(String description) {
+        CompanyDto companyDto = companyService.getCompanyOfLoggedInUser();
+        if(categoryRepository.findByDescriptionAndCompanyId(description, companyDto.getId())==null)return false;
+        return categoryRepository.findByDescriptionAndCompanyId(description, companyDto.getId()).getCompany().getId().equals(companyDto.getId());
+    }
 }
